# mh-recipe-optimizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  config.toml  exclude.txt  optimize.py  pyproject.toml  requirements.txt
src/: optimize.py
