[project]
name = "mh-recipe-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "pulp>=2.9.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[project.scripts]
optimize = 'optimize:main'

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "ruff>=0.9.5",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]